replaced the java 20 url creation with the java 21 url creation in limelightHelpers so vs code finally stops screaming at me for using depricated code